--- a/src/features/catalog/catalogCard/UI/styles.module.scss
+++ b/src/features/catalog/catalogCard/UI/styles.module.scss
@@ -264,7 +264,7 @@
           }
 
           @media (max-width: 576px) {
-            display: none;
+            // display: none;
           }
         }
       }
