--- a/src/widgets/mainPages/calculateIncome/calculate-income.module.scss
+++ b/src/widgets/mainPages/calculateIncome/calculate-income.module.scss
@@ -251,7 +251,8 @@
 
 .button {
   grid-area: item4;
-  background: radial-gradient(
+  background:
+    radial-gradient(
       419.34% 136.52% at 0% 100%,
       rgba(255, 255, 255, 0.2) 0%,
       rgba(125, 117, 117, 0) 100%
