--- a/src/widgets/mainPages/whyChooseUs/UI/styles.module.scss
+++ b/src/widgets/mainPages/whyChooseUs/UI/styles.module.scss
@@ -51,7 +51,8 @@
   }
 
   .button {
-    background: radial-gradient(
+    background:
+      radial-gradient(
         419.34% 136.52% at 0% 100%,
         rgba(255, 255, 255, 0.2) 0%,
         rgba(125, 117, 117, 0) 100%
