--- a/src/widgets/mainPages/platforms/platform-card/UI/styles.module.scss
+++ b/src/widgets/mainPages/platforms/platform-card/UI/styles.module.scss
@@ -5,31 +5,45 @@
   align-content: start;
   text-align: center;
   gap: 15px;
-  padding: 40px;
+  padding: 20px;
   align-items: center;
 
+  svg {
+    width: 64px;
+    height: 64px;
+  }
+
   @media (max-width: 992px) {
-    padding: 25px;
+    padding: 15px;
 
     svg {
-      width: 50px;
-      height: 50px;
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  @media (max-width: 576px) {
+    padding: 10px;
+
+    svg {
+      width: 30px;
+      height: 30px;
     }
   }
 
   .count {
     color: var(--Personal-colors-black);
-    font-size: 36px;
+    font-size: 28px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
 
     @media (max-width: 992px) {
-      font-size: 24px;
+      font-size: 20px;
     }
 
     @media (max-width: 768px) {
-      font-size: 18px;
+      font-size: 16px;
     }
   }
 
