feat: add premium logic

--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -11,8 +11,7 @@
   // Gradients
   --primary-gradient: linear-gradient(45deg, #0badc2 23.91%, #0aa5be 75.06%);
 
-  --Gradients-Gradient-2:
-    radial-gradient(
+  --Gradients-Gradient-2: radial-gradient(
       419.34% 136.52% at 0% 100%,
       rgba(255, 255, 255, 0.2) 0%,
       rgba(125, 117, 117, 0) 100%
