--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -19,8 +19,8 @@
 }
 
 body {
-  font-family:
-    "TT Runs Trial", "Montserrat Alternates", "Montserrat", sans-serif;
+  font-family: "TT Runs Trial", "Montserrat Alternates", "Montserrat",
+    sans-serif;
 
   &::-webkit-scrollbar {
     display: none;
@@ -156,8 +156,7 @@ body {
     inset: 0;
     z-index: -1;
     opacity: 0.2; // теперь opacity только на градиент
-    background-image:
-      radial-gradient(
+    background-image: radial-gradient(
         circle at 10% 80%,
         var(--Personal-colors-main),
         transparent 20%
@@ -170,8 +169,7 @@ body {
 
     @media (max-width: 992px) {
       opacity: 0.15;
-      background-image:
-        radial-gradient(
+      background-image: radial-gradient(
           circle at 10% 80%,
           var(--Personal-colors-main),
           transparent 20%
