fix: change % to vw in header

--- a/src/widgets/layouts/components/header/header.module.scss
+++ b/src/widgets/layouts/components/header/header.module.scss
@@ -5,7 +5,7 @@
   padding: 0px var(--left-padding-header);
   align-items: center;
   height: var(--header-height-xl);
-  width: 100%;
+  width: 100vw;
   z-index: 10;
   position: fixed;
   left: 0;
